<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.StatusFragment">

    <TextView
        android:id="@+id/auto_watering_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_label_auto_watering"
        android:layout_marginStart="@dimen/status_field_start_margin"
        android:layout_marginTop="@dimen/status_field_top_margin"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/wet_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_label_wet"
        android:layout_marginStart="@dimen/status_field_start_margin"
        android:layout_marginTop="@dimen/status_field_top_margin"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/auto_watering_label"/>

    <TextView
        android:id="@+id/temperature_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_label_temperature"
        android:layout_marginStart="@dimen/status_field_start_margin"
        android:layout_marginTop="@dimen/status_field_top_margin"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wet_label"/>

    <TextView
        android:id="@+id/last_watering_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_label_last_watering"
        android:layout_marginStart="@dimen/status_field_start_margin"
        android:layout_marginTop="@dimen/status_field_top_margin"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/temperature_label"/>

    <TextView
        android:id="@+id/next_watering_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_label_next_watering"
        android:layout_marginStart="@dimen/status_field_start_margin"
        android:layout_marginTop="@dimen/status_field_top_margin"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/last_watering_label"/>

    <TextView
        android:id="@+id/watering_mode_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_label_watering_mode"
        android:layout_marginStart="@dimen/status_field_start_margin"
        android:layout_marginTop="@dimen/status_field_top_margin"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/next_watering_label"/>

    <TextView
        android:id="@+id/capacity_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_label_capacity"
        android:layout_marginStart="@dimen/status_field_start_margin"
        android:layout_marginTop="@dimen/status_field_top_margin"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/watering_mode_label"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_margin="8dp"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/auto_watering_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/status_field_start_margin"
        android:layout_marginTop="@dimen/status_field_top_margin"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="выключен"/>

    <TextView
        android:id="@+id/wet_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/status_field_start_margin"
        android:layout_marginTop="@dimen/status_field_top_margin"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/auto_watering_value"
        tools:text="25%"/>

    <TextView
        android:id="@+id/temperature_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/status_field_start_margin"
        android:layout_marginTop="@dimen/status_field_top_margin"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/wet_value"
        tools:text="25 градусов"/>

    <TextView
        android:id="@+id/last_watering_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/status_field_start_margin"
        android:layout_marginTop="@dimen/status_field_top_margin"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/temperature_value"
        tools:text="15.05.2024 15:30"/>

    <TextView
        android:id="@+id/next_watering_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/status_field_start_margin"
        android:layout_marginTop="@dimen/status_field_top_margin"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/last_watering_value"
        tools:text="16.05.2024 15:30"/>

    <TextView
        android:id="@+id/watering_mode_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/status_field_start_margin"
        android:layout_marginTop="@dimen/status_field_top_margin"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/next_watering_value"
        tools:text="по расписанию"/>

    <TextView
        android:id="@+id/capacity_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/status_field_start_margin"
        android:layout_marginTop="@dimen/status_field_top_margin"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/watering_mode_value"
        tools:text="250 мл"/>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/plant"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/capacity_label"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/description_status_background_image" />

</androidx.constraintlayout.widget.ConstraintLayout>
