<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SetupFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_margin="8dp"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/auto_watering_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_label_auto_watering"
        android:layout_marginEnd="@dimen/setup_field_end_margin"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@id/power_switch"
        app:layout_constraintBottom_toBottomOf="@id/power_switch"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/power_switch"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="@dimen/setup_field_end_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ImageView
        android:id="@+id/on_off_divider"
        android:layout_width="0dp"
        android:layout_height="@dimen/grey_divider_height"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="24dp"
        android:background="@color/grey_light"
        app:layout_constraintTop_toBottomOf="@id/power_switch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/schedule_mode_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setup_label_schedule_mode"
        android:layout_marginEnd="@dimen/setup_field_end_margin"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@id/schedule_switch"
        app:layout_constraintBottom_toBottomOf="@id/schedule_switch"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/schedule_switch"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="@dimen/setup_field_end_margin"
        android:layout_marginTop="@dimen/setup_field_top_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/on_off_divider"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/start_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setup_label_start_date"
        android:layout_marginEnd="@dimen/setup_field_end_margin"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@id/start_date_value"
        app:layout_constraintBottom_toBottomOf="@id/start_date_value"/>

    <EditText
        android:id="@+id/start_date_value"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/setup_field_end_margin"
        android:layout_marginTop="@dimen/setup_field_top_margin"
        android:inputType="date"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/schedule_switch"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/end_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setup_label_end_date"
        android:layout_marginEnd="@dimen/setup_field_end_margin"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@id/end_date_value"
        app:layout_constraintBottom_toBottomOf="@id/end_date_value"/>

    <EditText
        android:id="@+id/end_date_value"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/setup_field_end_margin"
        android:layout_marginTop="@dimen/setup_field_top_margin"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:autofillHints="@string/setup_label_end_date"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start_date_value"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/watering_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/setup_field_end_margin"
        android:text="@string/setup_label_watering_time"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/watering_time_value"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@id/watering_time_value"/>

    <EditText
        android:id="@+id/watering_time_value"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/setup_field_end_margin"
        android:layout_marginTop="@dimen/setup_field_top_margin"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/end_date_value"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck"
        android:importantForAutofill="no" />

    <ImageView
        android:id="@+id/schedule_divider"
        android:layout_width="0dp"
        android:layout_height="@dimen/grey_divider_height"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="24dp"
        android:background="@color/grey_light"
        app:layout_constraintTop_toBottomOf="@id/watering_time_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/watering_mode_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setup_label_wet_mode"
        android:gravity="end"
        android:layout_marginEnd="@dimen/setup_field_end_margin"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@id/wet_level_switch"
        app:layout_constraintBottom_toBottomOf="@id/wet_level_switch"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/wet_level_switch"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="@dimen/setup_field_end_margin"
        android:layout_marginTop="@dimen/setup_field_top_margin"
        app:layout_constraintTop_toTopOf="@id/schedule_divider"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck"/>

    <TextView
        android:id="@+id/wet_level_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setup_label_wet_level"
        android:gravity="end"
        android:layout_marginEnd="@dimen/setup_field_end_margin"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@id/wet_level_value"
        app:layout_constraintBottom_toBottomOf="@id/wet_level_value"/>

    <EditText
        android:id="@+id/wet_level_value"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/setup_field_end_margin"
        android:layout_marginTop="@dimen/setup_field_top_margin"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wet_level_switch"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck"
        android:importantForAutofill="no" />

    <ImageView
        android:id="@+id/wet_divider"
        android:layout_width="0dp"
        android:layout_height="@dimen/grey_divider_height"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="24dp"
        android:background="@color/grey_light"
        app:layout_constraintTop_toBottomOf="@id/wet_level_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/capacity_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setup_label_capacity"
        android:layout_marginEnd="@dimen/setup_field_end_margin"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@id/capacity_value"
        app:layout_constraintBottom_toBottomOf="@id/capacity_value"/>

    <EditText
        android:id="@+id/capacity_value"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/setup_field_end_margin"
        android:layout_marginTop="@dimen/setup_field_top_margin"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wet_divider"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck"
        android:importantForAutofill="no" />

</androidx.constraintlayout.widget.ConstraintLayout>
